--- a/skin/skin.vcxproj
+++ b/skin/skin.vcxproj
@@ -129,10 +129,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="SkinSegmenter.cpp" />
     <ClCompile Include="源.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="low.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="opencv.h" />
+    <ClInclude Include="SkinSegmenter.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
