--- a/skin/skin.vcxproj.filters
+++ b/skin/skin.vcxproj.filters
@@ -18,10 +18,21 @@
     <ClCompile Include="源.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="SkinSegmenter.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Image Include="low.jpg">
       <Filter>资源文件</Filter>
     </Image>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="opencv.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="SkinSegmenter.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
