remove video file

--- a/.gitignore
+++ b/.gitignore
@@ -210,3 +210,5 @@ FakesAssemblies/
 GeneratedArtifacts/
 _Pvt_Extensions/
 ModelManifest.xml
+/HandTracker/Video/VID_20180718_102013.mp4
+/HandTracker/Video/VID_20180718_102220.mp4
